--- a/css/style.css
+++ b/css/style.css
@@ -1,232 +1,252 @@
-@charset "UTF-8";
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-nav,
-section,
-summary {
-  display: block;
-}
-
-audio,
-canvas,
-video {
-  display: inline-block;
-}
-
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
-[hidden], template {
-  display: none;
-}
-
+@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 html {
-  background: #fff;
-  color: #000;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-}
-
-html,
-button,
-input,
-select,
-textarea {
-  font-family: sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
-  margin: 0;
+  font-family: Montserrat, sans-serif;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-a {
-  background: transparent;
-}
-a:focus {
-  outline: thin dotted;
-}
-a:hover, a:active {
-  outline: 0;
+.container {
+  max-width: 1470px;
+  margin: 0 auto;
+  padding: 0px 15px;
 }
 
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+.nav-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: flex-end;
 }
 
-h2 {
-  font-size: 1.5em;
-  margin: 0.83em 0;
+.nav-item {
+  list-style: none;
 }
 
-h3 {
-  font-size: 1.17em;
-  margin: 1em 0;
+.nav-link {
+  line-height: 30px;
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+  transition: 0.2s;
+}
+.nav-link:hover {
+  box-shadow: -1px 1px 5px 0px rgba(255, 255, 255, 0.73);
 }
 
-h4 {
-  font-size: 1em;
-  margin: 1.33em 0;
+.main {
+  flex: 1 1 100%;
 }
 
-h5 {
-  font-size: 0.83em;
-  margin: 1.67em 0;
-}
-
-h6 {
-  font-size: 0.75em;
-  margin: 2.33em 0;
-}
-
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-
-b,
-strong {
-  font-weight: bold;
-}
-
-dfn {
-  font-style: italic;
-}
-
-mark {
-  background: #ff0;
-  color: #000;
-}
-
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, serif;
-  font-size: 1em;
-}
-
-pre {
-  white-space: pre;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-}
-
-q {
-  quotes: "“" "”" "‘" "’";
-}
-
-q:before, q:after {
-  content: "";
-  content: none;
-}
-
-small {
-  font-size: 80%;
-}
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
   position: relative;
-  vertical-align: baseline;
 }
 
-sup {
-  top: -0.5em;
+.section {
+  width: 50%;
 }
 
-sub {
-  bottom: -0.25em;
+.section-profile {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+.section-profile h1 {
+  font-size: 3rem;
+}
+.section-profile h3 {
+  font-size: 2rem;
+}
+.section-profile img {
+  display: block;
+  border-radius: 20%;
 }
 
-img {
-  border: 0;
+.popup-contact {
+  cursor: pointer;
+  position: fixed;
+  right: 20px;
+  bottom: 0%;
+  width: 4%;
+  z-index: 2;
+  opacity: 1;
+  transition: 0.4s;
+}
+.popup-contact:hover {
+  width: 5%;
+}
+.popup-contact.active {
+  transition: 0.4s;
+  opacity: 0;
 }
 
-svg:not(:root) {
-  overflow: hidden;
+.section-contacts {
+  opacity: 0;
+  font-size: 0.8rem;
+  border-radius: 8%;
+  position: fixed;
+  right: 0;
+  bottom: 8%;
+  background-color: grey;
+  transition: 1s;
+}
+.section-contacts.active {
+  opacity: 1;
+}
+.section-contacts ul {
+  padding: 0px 0px 0px 0px;
+  margin: 0px 5px 20px 5px;
+  width: 100%;
+}
+.section-contacts li {
+  padding: 5px;
+  list-style: none;
+}
+.section-contacts a {
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 600;
+  color: black;
+  transition: 0.2s;
+}
+.section-contacts a:hover {
+  color: rgb(5, 5, 77);
+}
+.section-contacts img {
+  width: 20px;
+  height: 20px;
 }
 
-figure {
-  margin: 0;
+.section-projects {
+  width: 100%;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+.section-projects .section-title {
+  width: 100%;
+}
+.section-projects .project-block {
+  width: 33.333%;
 }
 
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
+.section-title h2 {
+  text-align: center;
 }
 
-legend {
-  border: 0;
-  padding: 0;
-  white-space: normal;
+.section-education {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.section-education .section-title {
+  width: 100%;
 }
 
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  margin: 0;
-  vertical-align: baseline;
+.project-block {
+  max-width: 400px;
 }
 
-button, input {
-  line-height: normal;
+.project__name {
+  text-align: center;
+  padding-bottom: 10px;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+.project__link {
+  transition: 0.2s;
+}
+.project__link img {
+  width: 100%;
+}
+.project__link:hover {
+  box-shadow: 0px 0px 53px 10px rgba(62, 160, 234, 0.35);
+}
+.education__block {
+  max-width: 45%;
+}
+.education__block .speciality {
+  font-weight: 600;
+  font-size: 1.2rem;
 }
 
-button,
-select {
-  text-transform: none;
+.skill-block {
+  display: flex;
+}
+.skill-block p {
+  width: 20%;
+  margin: 5px 0px;
+}
+.skill-block ul {
+  padding-left: 20px;
 }
 
-button,
-html input[type=button],
-input[type=reset],
-input[type=submit] {
-  -webkit-appearance: button;
+.skill-list {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.skills-list__item {
+  width: 10px;
+  height: 10px;
+  background-color: orange;
+  border-radius: 50%;
+  list-style: none;
+  border: 1px solid orange;
+}
+.skills-list__item_another-colour {
+  background-color: white;
+  border: 1px solid white;
+}
+
+.section-skills li {
+  list-style: none;
+}
+
+.close {
+  width: 20px;
+  height: 20px;
+  background-image: url(../../assets/icons/close.svg);
+  z-index: 2;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.section-contacts__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+.section-contacts__close:hover {
   cursor: pointer;
 }
 
-button[disabled],
-input[disabled] {
-  cursor: default;
+.footer {
+  border-radius: 10px;
+  box-shadow: 0px 0px 23px -10px rgb(255, 255, 255);
 }
-
-button::-moz-focus-inner, input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
+.footer ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
-
-textarea {
-  overflow: auto;
-  vertical-align: top;
+.footer li {
+  list-style: none;
 }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-input[type=search] {
-  -webkit-appearance: textfield;
-  box-sizing: content-box;
-}
-input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-input[type=checkbox], input[type=radio] {
-  box-sizing: border-box;
-  padding: 0;
+.footer img {
+  width: 50px;
+  height: 50px;
 }/*# sourceMappingURL=style.css.map */
