--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ body {
 }
 
 .section {
+  min-width: 320px;
   width: 50%;
 }
 
@@ -92,6 +93,7 @@ body {
 }
 
 .section-contacts {
+  visibility: hidden;
   opacity: 0;
   font-size: 0.8rem;
   border-radius: 8%;
@@ -102,6 +104,7 @@ body {
   transition: 1s;
 }
 .section-contacts.active {
+  visibility: visible;
   opacity: 1;
 }
 .section-contacts ul {
