--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,6 +49,7 @@ body {
     position: relative;
 }
 .section {
+    min-width: 320px;
     width: 50%;
 }
 .section-profile {
@@ -89,6 +90,7 @@ body {
     // width: 60%;
 }
 .section-contacts {
+    visibility: hidden;
     opacity: 0;
     font-size: 0.8rem;
     border-radius: 8%;
@@ -98,6 +100,7 @@ body {
     background-color: grey;
     transition: 1s;
     &.active {
+        visibility: visible;
         opacity: 1;
     }
     ul {
@@ -127,6 +130,7 @@ body {
 }
 .section-code {
     pre {
+        // white-space: pre-line;
     }
 }
 .section-projects {
